<resources>
    <string name="app_name">CryptoApp</string>
    <string name="eShop">€-$hop</string>
    <string name="wallet">Wallet</string>
    <string name="exchange">Exchange</string>
    <string name="exchanges">Exchanges</string>
    <string name="launchpads">Launchpads</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="nft">NFT</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="top_cryptocurrencies">Top Cryptocurrencies</string>
    <string name="price">$%s USD</string>
    <string name="btc">BTC</string>
    <string name="volume_24h">Volume 24h</string>
    <string name="price_">Price</string>
    <string name="cmc_rank">Cmc Rank</string>
</resources>