<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingVertical="@dimen/_6sdp"
    tools:context=".ui.exchangeFrag.ExchangeFragment">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_bg"
        android:iconifiedByDefault="false"
        android:queryHint="Search Cryptocurrency"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@null" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:background="@drawable/rectangle_outlined_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_6sdp"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:src="@drawable/ic_filter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/filter"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/crypto_txt"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:tag="1"
        android:text="@string/cryptocurrency"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/nft_txt"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:tag="0"
        android:text="@string/nft"
        android:textColor="@color/default_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/crypto_txt"
        app:layout_constraintStart_toEndOf="@+id/crypto_txt"
        app:layout_constraintTop_toTopOf="@+id/crypto_txt" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_crypto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crypto_txt">

        <ImageView
            android:id="@+id/top_icon"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_bitcoin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_codeName"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/inter_bold"
            android:text="BTC"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toEndOf="@+id/top_icon"
            app:layout_constraintTop_toTopOf="@+id/top_icon" />

        <TextView
            android:id="@+id/top_name"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/bitcoin"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/top_codeName"
            app:layout_constraintTop_toBottomOf="@id/top_codeName" />

        <TextView
            android:id="@+id/top_price"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/inter_bold"
            android:text="$55,000 USD"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_codeName" />

        <TextView
            android:id="@+id/top_growth"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="2.5%"
            android:textColor="@color/green"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@+id/top_price"
            app:layout_constraintTop_toBottomOf="@id/top_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/top_crypto_txt"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/top_cryptocurrencies"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/view_all_txt"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:padding="@dimen/_3sdp"
        android:text="View All"
        android:textColor="@color/default_text_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/top_crypto_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_crypto_txt" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_6sdp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_crypto_txt"
        tools:listitem="@layout/item_crypto" />

</androidx.constraintlayout.widget.ConstraintLayout>